pequeño refactor: quito algunos metodos e imports no utilizados