@@ -8,7 +8,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -21,19 +21,19 @@ public class CorsConfig {
         CorsConfiguration config = new CorsConfiguration();
 
         // Esto permite peticiones únicamente desde el frontend
-        config.setAllowedOrigins(Arrays.asList("http://localhost:" + interfazAgregadorPort));
+        config.setAllowedOrigins(List.of("http://localhost:" + interfazAgregadorPort));
 
         // Permitir todos los métodos HTTP (GET, POST, PUT, DELETE, etc.)
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
 
         // Permitir todos los headers
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedHeaders(List.of("*"));
 
         // Permitir credenciales (cookies, authorization headers, etc.)
         config.setAllowCredentials(true);
 
         // Exponer todos los headers
-        config.setExposedHeaders(Arrays.asList("*"));
+        config.setExposedHeaders(List.of("*"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
